src/libs/yuni/nany/tests/invalid/missing_bracket_function.ny
program missingBracket;


function bar(x, y) (math.sqrt(x^x + y^y)

function foo
{
	if true then
	{
		doSomething;
	}
	else
	{
	}
}

